muncher/programs/test-cases/error-7.mnc.stderr
error: variable `print` is already defined in this scope
  --> test.mnc:1:5
  |
1 | let print = 1;
  |     ^^^^^ variable `print` is already defined in this scope

